# YoloFromScratch

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json
src/: main.cpp
